# Quartz

./: .editorconfig  .gitignore  Directory.Build.example.props  Directory.Build.props  Koren.slnx  Quartz.slnx  README.md  build.json  build.sh  test.sh
Koren/: Koren.csproj
Koren.Loader.ML/: Koren.Loader.ML.csproj  Loader.cs
Koren.Tests/: Koren.Tests.csproj  Program.cs
Koren/Async/: MainThread.cs
Koren/Compat/: KorenLogger.cs
Koren/Core/: Info.cs  KorenRuntime.cs  MainCore.cs  ModState.cs  OverlayCalibration.cs  RuntimeServices.cs  RuntimeTicks.cs
Koren/IO/: AtomicFile.cs  CoreSettings.cs  IOUtils.cs  ProfileManager.cs  SettingsFile.cs
Koren/Localization/: TextLocalization.cs  Translator.cs
Koren/Resource/: FontManager.cs  ResourceLoader.cs  ResourceManager.cs  SpriteManager.cs
Koren/Tween/: GTweenExtensions.cs  GTweenExtentions.cs
Koren/UI/: Tooltip.cs  UIColors.cs  UICore.cs  UpdateToast.cs
Koren/Update/: UpdateService.cs
Quartz/: Loader.cs  LoaderUmm.cs  Quartz.csproj
Quartz.Tests/: Program.cs  Quartz.Tests.csproj
Quartz/Async/: MainThread.cs
Quartz/Compat/: QuartzLogger.cs
Quartz/Core/: Info.cs  Keybind.cs  MainCore.cs  ModState.cs  OverlayCalibration.cs  QuartzRuntime.cs  RuntimeServices.cs  RuntimeTicks.cs  SemVer.cs
Quartz/IO/: AtomicFile.cs  CoreSettings.cs  IOUtils.cs  ProfileManager.cs  ProfileNames.cs  (+1 more)
agents/: commits.md  i18n.md  project.md  release.md
native/: build.sh  build_win.sh  bundle_macos.sh
native/koren_encoder/: CMakeLists.txt  koren_encoder.c  koren_encoder.h  test_encoder.c
tools/: release.sh
(+308 files in other folders)
